--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -69,7 +69,7 @@
    "id": "26cf0107",
    "metadata": {},
    "source": [
-    "After generating or downloading the result files, we can print and save tables summarizing the results and generate corresponding plots using `run_evaluation.py`. This might take a few minutes for the results from the paper, as these contain data for around 900.000 trained NNs! Note that some of the plot configurations are tailored towards our specific results and might need to be changed if you want to plot your own results. The generated files will be saved in the plots folder that has been configured in `custom_paths.py`. If you are only interested in the generated files, these will also be published [here](https://doi.org/10.18419/darus-2615) in the plots folder."
+    "After generating or downloading the result files, we can print and save tables summarizing the results and generate corresponding plots using `run_evaluation.py`. This might take a few minutes for the results from the paper, as these contain data for around 900.000 trained NNs! Note that some of the plot configurations are tailored towards our specific results and might need to be changed if you want to plot your own results. The generated files will be saved in the plots folder that has been configured in `custom_paths.py`. If you are only interested in the generated files, these will also be published [here](https://doi.org/10.18419/darus-2615) in the file `plots.tar.gz`."
    ]
   },
   {
@@ -1577,7 +1577,7 @@
     "- `ds_names` specifies the names of the data sets that experiments should be run on. Possible names can be found in the data folder specified in `custom_paths.py`. By default, all 15 data sets from the benchmark are used.\n",
     "- `sequential_split` specifies the index of the random split for which `max_jobs_per_device=1` is used; the results from this split can then be used for runtime evaluation. By default, this is set to 9. Since we only use `n_splits=2` here, this case is not reached.\n",
     "\n",
-    "Since the experiments above were run on a CPU, they took 4 minutes to complete, but this would be much faster on a GPU, especially with even higher `max_jobs_per_device`. If we ran this code again, it would notice that the results are already computed and would not recompute them."
+    "Since the experiments above were run on a CPU, they took 5 minutes to complete, but this would be much faster on a GPU, especially with even higher `max_jobs_per_device`. If we ran this code again, it would notice that the results are already computed and would not recompute them."
    ]
   },
   {
