v2 of the benchmark with BAIT implementation and other improvements

--- a/examples/framework_details.ipynb
+++ b/examples/framework_details.ipynb
@@ -158,7 +158,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
       "Input \u001b[0;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mget_tensor())\n",
-      "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal/feature_data.py:169\u001b[0m, in \u001b[0;36mFeatureData.__getitem__\u001b[0;34m(self, idxs)\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idxs: Union[torch\u001b[38;5;241m.\u001b[39mTensor, \u001b[38;5;28mslice\u001b[39m, \u001b[38;5;28mint\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndexes\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m    163\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    164\u001b[0m \u001b[38;5;124;03m    :param idxs: Represents the subset of samples that should be returned.\u001b[39;00m\n\u001b[1;32m    165\u001b[0m \u001b[38;5;124;03m    Note that if idxs is an int, the dimension will not be collapsed.\u001b[39;00m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;124;03m    In other words, self[i] is equivalent to self[i:i+1].\u001b[39;00m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;124;03m    :return: Returns the feature data represented by the subset of indexes in idxs.\u001b[39;00m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 169\u001b[0m     idxs \u001b[38;5;241m=\u001b[39m \u001b[43mIndexes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_n_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midxs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    170\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mis_all_slice():\n\u001b[1;32m    171\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal/feature_data.py:177\u001b[0m, in \u001b[0;36mFeatureData.__getitem__\u001b[0;34m(self, idxs)\u001b[0m\n\u001b[1;32m    170\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, idxs: Union[torch\u001b[38;5;241m.\u001b[39mTensor, \u001b[38;5;28mslice\u001b[39m, \u001b[38;5;28mint\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndexes\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m    171\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    172\u001b[0m \u001b[38;5;124;03m    :param idxs: Represents the subset of samples that should be returned.\u001b[39;00m\n\u001b[1;32m    173\u001b[0m \u001b[38;5;124;03m    Note that if idxs is an int, the dimension will not be collapsed.\u001b[39;00m\n\u001b[1;32m    174\u001b[0m \u001b[38;5;124;03m    In other words, self[i] is equivalent to self[i:i+1].\u001b[39;00m\n\u001b[1;32m    175\u001b[0m \u001b[38;5;124;03m    :return: Returns the feature data represented by the subset of indexes in idxs.\u001b[39;00m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 177\u001b[0m     idxs \u001b[38;5;241m=\u001b[39m \u001b[43mIndexes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_n_samples\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midxs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    178\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mis_all_slice():\n\u001b[1;32m    179\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
       "File \u001b[0;32m/media/data/prog/projects/batch_active_learning/bmdal/feature_data.py:48\u001b[0m, in \u001b[0;36mIndexes.__init__\u001b[0;34m(self, n_samples, idxs)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(idxs, \u001b[38;5;28mslice\u001b[39m):\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstep \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m---> 48\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot handle slices with step size other than 1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     49\u001b[0m     start \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstart \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m n_samples)\n\u001b[1;32m     50\u001b[0m     stop \u001b[38;5;241m=\u001b[39m n_samples \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m idxs\u001b[38;5;241m.\u001b[39mstop \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m n_samples)\n",
       "\u001b[0;31mValueError\u001b[0m: Cannot handle slices with step size other than 1"
      ]
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "3963197f",
    "metadata": {},
    "outputs": [],
@@ -232,6 +232,7 @@
     "n_features = 1024\n",
     "n_train = 100\n",
     "n_pool = 1000\n",
+    "torch.manual_seed(1234)\n",
     "train_data = TensorFeatureData(torch.randn(n_train, n_features))\n",
     "pool_data = TensorFeatureData(torch.randn(n_pool, n_features))\n",
     "feature_map = IdentityFeatureMap(n_features=n_features)\n",
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "052bd593",
    "metadata": {},
    "outputs": [
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "43741d4a",
    "metadata": {},
    "outputs": [
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "692beb0f",
    "metadata": {},
    "outputs": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "0114e5ae",
    "metadata": {},
    "outputs": [
@@ -351,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bmdal.feature_data.BatchedFeatureData object at 0x7fb9ba7b22b0>\n"
+      "<bmdal.feature_data.BatchedFeatureData object at 0x7fc1b6b95f40>\n"
      ]
     }
    ],
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "f59298cd",
    "metadata": {},
    "outputs": [
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "869b0794",
    "metadata": {},
    "outputs": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "985cca5e",
    "metadata": {},
    "outputs": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "3adf49a7",
    "metadata": {},
    "outputs": [
@@ -463,9 +464,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bmdal.feature_maps.SequentialFeatureMap object at 0x7fb9bb324d00>\n",
-      "[<bmdal.feature_maps.IdentityFeatureMap object at 0x7fb9ba7b2af0>]\n",
-      "<bmdal.feature_maps.LinearFeatureMap object at 0x7fba682ea9d0>\n"
+      "<bmdal.feature_maps.SequentialFeatureMap object at 0x7fc1b6bdb670>\n",
+      "[<bmdal.feature_maps.IdentityFeatureMap object at 0x7fc1b6b95ca0>]\n",
+      "<bmdal.feature_maps.LinearFeatureMap object at 0x7fc1b6c82a30>\n"
      ]
     }
    ],
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "4b59f6e6",
    "metadata": {},
    "outputs": [
@@ -501,12 +502,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 1.2207e-04,  1.9775e+03,  2.1163e+03],\n",
-      "        [ 1.9775e+03, -2.4414e-04,  2.1585e+03],\n",
-      "        [ 2.1163e+03,  2.1585e+03,  0.0000e+00]])\n",
-      "tensor([[ 0.0000e+00,  2.0599e+03,  2.3116e+03],\n",
-      "        [ 2.0599e+03, -1.2207e-04,  2.0007e+03],\n",
-      "        [ 2.3116e+03,  2.0007e+03,  0.0000e+00]])\n"
+      "tensor([[   0.0000, 2293.8921, 2072.6375],\n",
+      "        [2293.8921,    0.0000, 2237.8413],\n",
+      "        [2072.6375, 2237.8413,    0.0000]])\n",
+      "tensor([[1.2207e-04, 2.1194e+03, 1.9793e+03],\n",
+      "        [2.1194e+03, 0.0000e+00, 2.1576e+03],\n",
+      "        [1.9793e+03, 2.1576e+03, 1.2207e-04]])\n"
      ]
     }
    ],
@@ -520,12 +521,12 @@
    "id": "21e9f014",
    "metadata": {},
    "source": [
-    "In order to make the computation of quantities such as kernel matrices faster, we would like to apply the sketching matrix to the data once in advance. This is automatically done by the precompute transformation. We can (for the sake of example) also batch this operations and then afterwards call `.simplify()`, which assembles the batches back together such that subsequent operations will not be batched:"
+    "In order to make the computation of quantities such as kernel matrices faster, we would like to apply the sketching matrix to the data once in advance. This is automatically done by the precompute transformation. We can (for the sake of example) also batch this operation and then afterwards call `.simplify()`, which assembles the batches back together such that subsequent operations will not be batched:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "899238d2",
    "metadata": {},
    "outputs": [],
@@ -544,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "01dbb11e",
    "metadata": {},
    "outputs": [
@@ -552,8 +553,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<bmdal.feature_maps.IdentityFeatureMap object at 0x7fb9ba7b22b0>\n",
-      "<bmdal.feature_data.TensorFeatureData object at 0x7fb9ba85ad00>\n"
+      "<bmdal.feature_maps.IdentityFeatureMap object at 0x7fc1b694a4c0>\n",
+      "<bmdal.feature_data.TensorFeatureData object at 0x7fc1b6c82940>\n"
      ]
     }
    ],
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "3c5329f1",
    "metadata": {},
    "outputs": [
@@ -580,12 +581,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1114.8538,   13.5552,  -49.1096],\n",
-      "        [  13.5552,  972.1379,   34.9752],\n",
-      "        [ -49.1096,   34.9752, 1098.5217]])\n",
-      "tensor([[1114.8540,   13.5552,  -49.1097],\n",
-      "        [  13.5552,  972.1379,   34.9752],\n",
-      "        [ -49.1097,   34.9752, 1098.5219]])\n"
+      "tensor([[ 893.5628, -108.3986,  -57.4941],\n",
+      "        [-108.3986, 1009.0555,  -88.8848],\n",
+      "        [ -57.4941,  -88.8848,  970.7518]])\n",
+      "tensor([[ 893.5627, -108.3986,  -57.4940],\n",
+      "        [-108.3986, 1009.0555,  -88.8848],\n",
+      "        [ -57.4940,  -88.8848,  970.7517]])\n"
      ]
     }
    ],
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "0fc4ebc8",
    "metadata": {},
    "outputs": [
@@ -612,8 +613,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for precomputed: 0.0120967s\n",
-      "Time for not precomputed: 0.0342816s\n"
+      "Time for precomputed: 0.0102644s\n",
+      "Time for not precomputed: 0.0314671s\n"
      ]
     }
    ],
@@ -675,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "09132b48",
    "metadata": {},
    "outputs": [
@@ -683,7 +684,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 92, 661, 694, 617, 440])\n"
+      "tensor([655, 228, 970, 508, 150])\n"
      ]
     }
    ],
